--- a/practicas/solucionIV/package.json
+++ b/practicas/solucionIV/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "build": "babel src --out-dir dist",
-    "dev": "nodemon --watch src --exec 'npm run build && node dist/app.js'",
+    "dev": "nodemon --watch src --ext js,graphql --exec 'npm run build && node dist/app.js'",
     "start": "npm run build && node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
