--- a/examenes/2324/parcialA/env.sample
+++ b/examenes/2324/parcialA/env.sample
@@ -1,3 +1,3 @@
 WEATHERAPI_API_KEY=xxxxxxxxxxxxxxxxxx
-MONGO_URL=mongodb+srv://usr:pwd@xxxx.aaaaa.gcp.mongodb.net/contactos?retryWrites=true&w=majority
-MONGO_URL_TEST=mongodb+srv://usr:pwd@xxxx.aaaaa.gcp.mongodb.net/contactosTest?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://usr:pwd@xxxx.aaaaa.gcp.mongodb.net
+MONGO_URL_TEST=mongodb+srv://usr:pwd@xxxx.aaaaa.gcp.mongodb.net
