--- a/examenes/2425/parcial/A/deno.json
+++ b/examenes/2425/parcial/A/deno.json
@@ -1,9 +1,9 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --env -A --watch main.ts",
+    "start": "deno run --env -A main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1",
     "mongodb": "npm:mongodb@^6.10.0"
   }
 }
